[gd_scene load_steps=5 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://RandomStep.tres" type="AudioStream" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.227451, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 42.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 102.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 5
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/Logo"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 108.0
margin_bottom = 21.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Slime Stampede"

[node name="Play" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 108.0
margin_bottom = 46.0
text = "Play"

[node name="Fullscreen" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 108.0
margin_bottom = 68.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 108.0
margin_bottom = 90.0
text = "Quit"

[node name="VSeparator" type="VSeparator" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 108.0
margin_bottom = 97.0

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -18.0
text = "MiniJam 76"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 82.0
text = "Fuzzyzilla 2021"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
